tests/purs/failing/ClassHeadNoVTA3.out
Error found:
in module [33mMain[0m
at tests/purs/failing/ClassHeadNoVTA3.purs:8:16 - 8:36 (line 8, column 16 - line 8, column 36)

  No type class instance was found for
  [33m                       [0m
  [33m  Main.MultiMissing Int[0m
  [33m                    t0 [0m
  [33m                       [0m
  The instance head contains unknown type variables. Consider using visible type application(s):
  [33m                                  [0m
  [33m  useMultiMissing @Int @norThisOne[0m
  [33m                                  [0m

while checking that expression [33museMultiMissing[0m
  has type [33mInt[0m
in value declaration [33mmultiMissing[0m

where [33mt0[0m is an unknown type

See https://github.com/purescript/documentation/blob/master/errors/NoInstanceFound.md for more information,
or to contribute content related to this error.

